--- a/.github/workflows/build-padavan.yml
+++ b/.github/workflows/build-padavan.yml
@@ -16,6 +16,9 @@ on:
 
 jobs:
   build:
+    runs-on: ubuntu-22.04
+    if: github.event.repository.owner.id == github.event.sender.id
+
     steps:
     - name: Checkout
       uses: actions/checkout@master
@@ -28,21 +31,14 @@ jobs:
         cpio git python-docutils gettext automake autopoint texinfo build-essential help2man \
         pkg-config zlib1g-dev libgmp3-dev libmpc-dev libmpfr-dev libncurses5-dev libltdl-dev wget
     - name: Clone source code
-      env:
-        KERNEL: 4.4
       run: |
-        if [ $KERNEL = "4.4" ] ; then
-        git clone --depth=1 https://github.com/yihuw0/padavan-4.4newifi3.git /opt/rt-n56u
-        else
-        git clone --depth=1 https://github.com/chongshengB/rt-n56u.git /opt/rt-n56u
-        fi
+        git clone --depth=1 https://github.com/MeIsReallyBa/padavan-4.4.git /opt/rt-n56u
         cd /opt/rt-n56u/toolchain-mipsel
         sh dl_toolchain.sh
         mkdir -p /opt/images/
     - name: Build Firmware
       env:
-        TNAME: NEWIFI3
-        KERNEL: 4.4
+        TNAME: K2P
       run: |
         cd /opt/rt-n56u/trunk
         if [ ! -f configs/templates/$TNAME.config ] ; then
@@ -50,16 +46,88 @@ jobs:
         exit 1
         fi
         cp -f configs/templates/$TNAME.config .config
-        sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
         ################################################################################################
         #因不同型号配置功能不一样，所以先把配置项删除，如果你自己要添加其他的，也要写上删除这一条，切记！！！
-        
+        ################################################################################################
+        sed -i 's/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=n/CONFIG_FIRMWARE_INCLUDE_OPENSSL_EXE=y/g' .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_MENTOHUST=/d' .config #删除配置项MENTOHUST
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=/d' .config #删除配置项SCUTCLIENT
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=/d' .config #删除配置项SS plus+
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSOBFS=/d' .config # simple-obfs混淆插件
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_V2RAY=/d' .config #集成v2ray执行文件（3.8M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TROJAN=/d' .config #集成trojan执行文件(1.1M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SSSERVER=/d' .config #删除配置项SS server
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=/d' .config #删除配置项DNSFORWARDER
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ADBYBY=/d' .config #删除配置项adbyby plus+
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_KOOLPROXY=/d' .config #KP广告过滤
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPC=/d' .config #删除配置项adbyby plus+
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FRPS=/d' .config #删除配置项adbyby plus+
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_TUNSAFE=/d' .config #删除配置项adbyby plus+
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ALIDDNS=/d' .config #删除配置项阿里DDNS
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMARTDNS=/d' .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMARTDNSBIN=/d' .config #smartdns二进制文件
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SRELAY=/d' .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_CADDY=/d' .config #在线文件管理服务
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_CADDYBIN=/d' .config #集成caddu执行文件，此文件有13M,请注意固件大小。如果不集成，会从网上下载下来执行，不影响正常使用
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=/d' .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ADGUARDHOMEBIN=/d' .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_WYY=/d' .config #网易云解锁
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_WYYBIN=/d' .config #网易云解锁GO版本执行文件（4M多）注意固件超大小,不集成会自动下载
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_ZEROTIER=/d' .config #zerotier ~1.3M
+        ######################################################################
         #以下选项是定义你需要的功能（y=集成,n=忽略），重新写入到.config文件
-
+        ######################################################################
+        echo "CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n" >> .config #MENTOHUST
+        echo "CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n" >> .config #SCUTCLIENT
+        echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+
+        echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=n" >> .config # simple-obfs混淆插件
+        echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=n" >> .config #集成v2ray执行文件（3.8M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
+        echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=n" >> .config #集成trojan执行文件(1.1M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
+        echo "CONFIG_FIRMWARE_INCLUDE_SSSERVER=n" >> .config #SS server
+        echo "CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n" >> .config #DNSFORWARDER
+        echo "CONFIG_FIRMWARE_INCLUDE_ADBYBY=y" >> .config #adbyby plus+
+        echo "CONFIG_FIRMWARE_INCLUDE_KOOLPROXY=n" >> .config #KP广告过滤
+        echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config #内网穿透FRPC
+        echo "CONFIG_FIRMWARE_INCLUDE_FRPS=n" >> .config #内网穿透FRPS
+        echo "CONFIG_FIRMWARE_INCLUDE_TUNSAFE=n" >> .config #TUNSAFE
+        echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=n" >> .config #阿里DDNS
+        echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNS=y" >> .config #smartdns
+        echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNSBIN=n" >> .config #smartdns二进制文件
+        echo "CONFIG_FIRMWARE_INCLUDE_SRELAY=n" >> .config #可以不集成
+        echo "CONFIG_FIRMWARE_INCLUDE_CADDY=n" >> .config #在线文件管理服务
+        echo "CONFIG_FIRMWARE_INCLUDE_CADDYBIN=n" >> .config #集成caddu执行文件，此文件有13M,请注意固件大小。如果不集成，会从网上下载下来执行，不影响正常使用
+        echo "CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_ADGUARDHOMEBIN=n" >> .config
+        echo "CONFIG_FIRMWARE_INCLUDE_WYY=y" >> .config #网易云解锁
+        echo "CONFIG_FIRMWARE_INCLUDE_WYYBIN=n" >> .config #网易云解锁GO版本执行文件（4M多）注意固件超大小,不集成会自动下载
+        echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=y" >> .config #zerotier ~1.3M
+        #########################################################################################
         #自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
         #格式如下：
         #sed -i '/自定义项/d' .config
         #echo "自定义项=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DROPBEAR=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DROPBEAR=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENSSH=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENSSH=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_WIREGUARD=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_WIREGUARD=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_CPU_SLEEP=/d' .config
+        echo "CONFIG_FIRMWARE_CPU_SLEEP=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_OPENVPN=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_OPENVPN=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_DOGCOM=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_DOGCOM=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_CIFS=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_CIFS=y" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_SMBD36=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_SMBD36=n" >> .config
+        sed -i '/CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=/d' .config
+        echo "CONFIG_FIRMWARE_INCLUDE_FFMPEG_NEW=n" >> .config
         #########################################################################################
         sudo ./clear_tree
         sudo ./build_firmware_modify $TNAME 0
@@ -70,3 +138,11 @@ jobs:
       with:
         name: Padavan-packages
         path: /opt/images
+    - name: Upload firmware to WeTransfer
+      id: wetransfer
+      if: always()
+      run: |
+        curl -fsSL git.io/file-transfer | sh
+        ./transfer wet -s -p 16 --no-progress /opt/images 2>&1 | tee wetransfer.log
+        echo "::warning file=wetransfer.com::$(cat wetransfer.log | grep https)"
+        echo "::set-output name=url::$(cat wetransfer.log | grep https | cut -f3 -d" ")"
